--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,7 @@ jobs:
       # Step 4: Run tests
       - name: test
         run: npm test
-
-     # Step 5: Save Build Artifacts
+     # Step 6: Save Build Artifacts
       - name: Save Artifacts
         if: github.ref == 'refs/heads/main'
         uses: actions/upload-artifact@v3
@@ -41,7 +40,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build  # Đảm bảo chỉ chạy sau khi job 'build' thành công
     if: github.ref == 'refs/heads/main' 
 
     steps:
@@ -56,14 +55,9 @@ jobs:
           name: build-artifacts
 
       # Step 3: Deploy to Render
-      - name: Deploy to Render
-        env:
-          RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
-        run: |
-          curl -X POST https://api.render.com/deploy \
-            -H "Authorization: Bearer $RENDER_API_KEY" \
-            -H "Content-Type: application/json" \
-            -d '{
-              "serviceId": "srv-ct0qcbm8ii6s73f8si10",
-              "clearCache": true
-            }'
+      - name: Deploy to Azure App Service
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: finalDevops  # Thay bằng tên dịch vụ Azure của bạn
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}  # Thêm Azure Publish Profile secret
+          package: .  # Đường dẫn thư mục triển khai (ở đây là thư mục hiện tại)
