--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build  # Đảm bảo chỉ chạy sau khi job 'build' thành công
+    needs: build 
     if: github.ref == 'refs/heads/main' 
 
     steps:
@@ -55,9 +55,22 @@ jobs:
           name: build-artifacts
 
       # Step 3: Deploy to Render
-      - name: Deploy to Azure App Service
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: finalDevops  # Thay bằng tên dịch vụ Azure của bạn
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}  # Thêm Azure Publish Profile secret
-          package: .  # Đường dẫn thư mục triển khai (ở đây là thư mục hiện tại)
+      # - name: Deploy to Azure App Service
+      #   uses: azure/webapps-deploy@v2
+      #   with:
+      #     app-name: finalDevops  # Thay bằng tên dịch vụ Azure của bạn
+      #     publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}  # Thêm Azure Publish Profile secret
+      #     package: . 
+
+      # Azure đã hết free nên nhóm chúng em dùng Render cloud để build, test, artifact và deploy 
+      - name: Deploy to Render
+        env:
+          RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
+        run: |
+          curl -X POST https://api.render.com/deploy \
+            -H "Authorization: Bearer $RENDER_API_KEY" \
+            -H "Content-Type: application/json" \
+            -d '{
+              "serviceId": "srv-ct0r0ka3esus73esqa6g",
+              "clearCache": true
+            }'
